# dumlRemover

./: README.md  dumlRemover.cabal
src/: Main.hs
